--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
 	</properties>
 	<dependencies>
 		<dependency>
+		    <groupId>com.oracle.database.jdbc</groupId>
+		    <artifactId>ojdbc11</artifactId>
+		    <version>23.3.0.23.09</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
